--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>CORE SERIES Level 3 - Visual Edit</title>
+<title>CORE SERIES Level 3 - Final Clean</title>
 <style>
 body { margin:0; font-family:"Segoe UI", sans-serif; background:#111; display:flex; justify-content:center; align-items:center; height:100vh; color:#eee; }
 .phone-frame { width:360px; height:640px; background:#222; border-radius:40px; overflow:hidden; position:relative; box-shadow:0 0 30px rgba(0,0,0,0.7); }
@@ -14,12 +14,8 @@ body { margin:0; font-family:"Segoe UI", sans-serif; background:#111; display:fl
 .jawaban div { background:#555; padding:10px; border-radius:8px; cursor:pointer; transition:background 0.3s ease; }
 .jawaban div.correct { background:#2ecc71; color:#fff; }
 .text-overlay { position:absolute; bottom:20px; left:20px; font-size:14px; line-height:1.4; max-width:320px; opacity:0; transition:opacity 0.5s ease; }
-/* WARNA SEMENTARA UNTUK VISUAL EDIT */
-.text-overlay.edit { background:rgba(255,0,0,0.2); padding:3px; border-radius:3px; }
 .fade-in { opacity:1 !important; }
 .list-small { position:absolute; top:10px; right:10px; font-size:10px; color:#aaa; display:flex; flex-direction:column; gap:2px; opacity:0; transition:opacity 0.3s ease; }
-/* WARNA SEMENTARA LIST */
-.list-small.edit { background:rgba(0,255,0,0.2); padding:2px 4px; border-radius:3px; }
 .list-small.show { opacity:1; }
 .level { display:none; }
 .level.active { display:block; }
@@ -38,11 +34,11 @@ body { margin:0; font-family:"Segoe UI", sans-serif; background:#111; display:fl
       <div>C: 180 km</div>
       <div>D: 240 km</div>
     </div>
-    <div class="text-overlay edit" id="overlay1-1">Langsung jawab. Tanpa membaca struktur.</div>
-    <div class="text-overlay edit" id="overlay1-2">Soal selalu meminta ini dulu.</div>
-    <div class="text-overlay edit" id="overlay1-3">Bukan lebih pintar. Lebih teratur.</div>
-    <div class="text-overlay edit" id="overlay1-4">Yang dilatih bukan soal. Tapi urutan berpikir.</div>
-    <div class="list-small edit" id="list1">
+    <div class="text-overlay" id="overlay1-1">Langsung jawab. Tanpa membaca struktur.</div>
+    <div class="text-overlay" id="overlay1-2">Soal selalu meminta ini dulu.</div>
+    <div class="text-overlay" id="overlay1-3">Bukan lebih pintar. Lebih teratur.</div>
+    <div class="text-overlay" id="overlay1-4">Yang dilatih bukan soal. Tapi urutan berpikir.</div>
+    <div class="list-small" id="list1">
       <div>Konsep</div><div>Domain</div><div>Opsi</div><div>Eliminasi</div><div>Validasi</div><div>Logika</div><div>Konfirmasi</div>
     </div>
   </div>
@@ -55,10 +51,10 @@ body { margin:0; font-family:"Segoe UI", sans-serif; background:#111; display:fl
       <div>B: Konsep Benar</div>
       <div>C: Konsep Distractor</div>
     </div>
-    <div class="text-overlay edit" id="overlay2-1">Memilih domain keliru → jawaban salah.</div>
-    <div class="text-overlay edit" id="overlay2-2">Langkah logis memeriksa konsep sangat penting.</div>
-    <div class="text-overlay edit" id="overlay2-3">Urutan berpikir lebih penting daripada jawaban instan.</div>
-    <div class="list-small edit" id="list2">
+    <div class="text-overlay" id="overlay2-1">Memilih domain keliru → jawaban salah.</div>
+    <div class="text-overlay" id="overlay2-2">Langkah logis memeriksa konsep sangat penting.</div>
+    <div class="text-overlay" id="overlay2-3">Urutan berpikir lebih penting daripada jawaban instan.</div>
+    <div class="list-small" id="list2">
       <div>Konsep</div><div>Domain</div><div>Opsi</div><div>Eliminasi</div><div>Validasi</div><div>Logika</div><div>Konfirmasi</div>
     </div>
   </div>
@@ -72,11 +68,11 @@ body { margin:0; font-family:"Segoe UI", sans-serif; background:#111; display:fl
       <div>C: 180 km</div>
       <div>D: 240 km</div>
     </div>
-    <div class="text-overlay edit" id="overlay3-1">Terjebak jawaban yang tampak benar.</div>
-    <div class="text-overlay edit" id="overlay3-2">Cek tiap opsi. Mana benar-benar sesuai soal?</div>
-    <div class="text-overlay edit" id="overlay3-3">Bukan lebih pintar. Lebih teliti memilih opsi.</div>
-    <div class="text-overlay edit" id="overlay3-4">Yang dilatih bukan soal. Tapi kemampuan eliminasi & logika.</div>
-    <div class="list-small edit" id="list3">
+    <div class="text-overlay" id="overlay3-1">Terjebak jawaban yang tampak benar.</div>
+    <div class="text-overlay" id="overlay3-2">Cek tiap opsi. Mana benar-benar sesuai soal?</div>
+    <div class="text-overlay" id="overlay3-3">Bukan lebih pintar. Lebih teliti memilih opsi.</div>
+    <div class="text-overlay" id="overlay3-4">Yang dilatih bukan soal. Tapi kemampuan eliminasi & logika.</div>
+    <div class="list-small" id="list3">
       <div>Konsep</div><div>Domain</div><div>Opsi</div><div>Eliminasi</div><div>Validasi</div><div>Logika</div><div>Konfirmasi</div>
     </div>
   </div>
@@ -84,14 +80,14 @@ body { margin:0; font-family:"Segoe UI", sans-serif; background:#111; display:fl
   <!-- ===== LEVEL 3.4: Rationale Singkat ===== -->
   <div class="screen level" id="level3-4">
     <div class="soal">Mari lihat Rationale singkatnya.</div>
-    <div class="text-overlay edit" id="overlay4-1">Langkah 1: Identifikasi konsep</div>
-    <div class="text-overlay edit" id="overlay4-2">Langkah 2: Tentukan domain</div>
-    <div class="text-overlay edit" id="overlay4-3">Langkah 3: Periksa opsi</div>
-    <div class="text-overlay edit" id="overlay4-4">Langkah 4: Eliminasi</div>
-    <div class="text-overlay edit" id="overlay4-5">Langkah 5: Validasi</div>
-    <div class="text-overlay edit" id="overlay4-6">Langkah 6–7: Logika & Konfirmasi</div>
-    <div class="text-overlay edit" id="overlay4-7">Rationale singkat ini membentuk urutan berpikir yang benar.</div>
-    <div class="list-small edit" id="list4">
+    <div class="text-overlay" id="overlay4-1">Langkah 1: Identifikasi konsep</div>
+    <div class="text-overlay" id="overlay4-2">Langkah 2: Tentukan domain</div>
+    <div class="text-overlay" id="overlay4-3">Langkah 3: Periksa opsi</div>
+    <div class="text-overlay" id="overlay4-4">Langkah 4: Eliminasi</div>
+    <div class="text-overlay" id="overlay4-5">Langkah 5: Validasi</div>
+    <div class="text-overlay" id="overlay4-6">Langkah 6–7: Logika & Konfirmasi</div>
+    <div class="text-overlay" id="overlay4-7">Rationale singkat ini membentuk urutan berpikir yang benar.</div>
+    <div class="list-small" id="list4">
       <div>Konsep</div><div>Domain</div><div>Opsi</div><div>Eliminasi</div><div>Validasi</div><div>Logika</div><div>Konfirmasi</div>
     </div>
   </div>
@@ -103,11 +99,11 @@ body { margin:0; font-family:"Segoe UI", sans-serif; background:#111; display:fl
       <div>A: Jawaban Instan</div>
       <div>B: Jawaban Sistematis</div>
     </div>
-    <div class="text-overlay edit" id="overlay5-1">Hanya mengandalkan jawaban cepat, bukan proses berpikir.</div>
-    <div class="text-overlay edit" id="overlay5-2">Urutan berpikir yang sistematis lebih penting daripada menghafal jawaban.</div>
-    <div class="text-overlay edit" id="overlay5-3">Dengan trainer system → latihan menjadi efektif.</div>
-    <div class="text-overlay edit" id="overlay5-4">Latihan bukan soal. Tapi sistem berpikir yang benar.</div>
-    <div class="list-small edit" id="list5">
+    <div class="text-overlay" id="overlay5-1">Hanya mengandalkan jawaban cepat, bukan proses berpikir.</div>
+    <div class="text-overlay" id="overlay5-2">Urutan berpikir yang sistematis lebih penting daripada menghafal jawaban.</div>
+    <div class="text-overlay" id="overlay5-3">Dengan trainer system → latihan menjadi efektif.</div>
+    <div class="text-overlay" id="overlay5-4">Latihan bukan soal. Tapi sistem berpikir yang benar.</div>
+    <div class="list-small" id="list5">
       <div>Konsep</div><div>Domain</div><div>Opsi</div><div>Eliminasi</div><div>Validasi</div><div>Logika</div><div>Konfirmasi</div>
     </div>
   </div>
