--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>CORE SERIES Level 3 - Final Fix</title>
+<title>CORE SERIES Level 3 - Profesional</title>
+<link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 <style>
-body { margin:0; font-family:"Segoe UI", sans-serif; background:#111; display:flex; justify-content:center; align-items:center; height:100vh; color:#eee; }
-.phone-frame { width:360px; height:640px; background:#222; border-radius:40px; overflow:hidden; position:relative; box-shadow:0 0 30px rgba(0,0,0,0.7); }
-.screen { width:100%; height:100%; position:relative; padding:20px; box-sizing:border-box; display:none; }
+body { margin:0; font-family:"Roboto", sans-serif; background:#111; display:flex; justify-content:center; align-items:center; height:100vh; color:#eee; }
+.phone-frame { width:360px; height:640px; background:#222; border-radius:40px; overflow:hidden; position:relative; box-shadow:0 0 30px rgba(0,0,0,0.7); padding:20px; box-sizing:border-box; }
+.screen { width:100%; height:100%; position:relative; display:none; }
 .screen.active { display:block; }
-.soal { font-size:16px; line-height:1.5; background:#333; padding:15px; border-radius:10px; margin-bottom:20px; }
-.jawaban { display:flex; flex-direction:column; gap:10px; margin-top:10px; }
-.jawaban div { background:#555; padding:10px; border-radius:8px; cursor:pointer; transition:background 0.3s ease; }
+.soal { font-family:"Anton", sans-serif; font-size:24px; line-height:1.4; background:#333; padding:20px; border-radius:12px; margin-bottom:20px; color:#fff; }
+.jawaban { display:flex; flex-direction:column; gap:12px; margin-top:10px; }
+.jawaban div { font-size:18px; font-weight:500; background:#444; padding:12px; border-radius:10px; cursor:pointer; transition:all 0.3s ease; color:#fff; }
 .jawaban div.correct { background:#2ecc71; color:#fff; }
-.text-overlay { position:absolute; bottom:20px; left:20px; font-size:14px; line-height:1.4; max-width:320px; opacity:0; transition:opacity 0.5s ease; }
+.text-overlay { position:absolute; bottom:30px; left:25px; font-family:"Roboto", sans-serif; font-size:16px; line-height:1.5; max-width:310px; color:#fff; opacity:0; transition:opacity 0.5s ease; }
 .text-overlay.fade-in { opacity:1 !important; }
-.list-small { position:absolute; top:10px; right:10px; font-size:10px; color:#aaa; display:flex; flex-direction:column; gap:2px; opacity:0; transition:opacity 0.3s ease; }
+.list-small { position:absolute; top:15px; right:15px; font-size:11px; color:#aaa; display:flex; flex-direction:column; gap:2px; opacity:0; transition:opacity 0.3s ease; }
 .list-small.show { opacity:1; }
 </style>
 </head>
@@ -23,7 +24,7 @@ body { margin:0; font-family:"Segoe UI", sans-serif; background:#111; display:fl
 
 <div class="phone-frame">
 
-  <!-- ===== LEVEL 3.1: Salah Baca Soal ===== -->
+  <!-- LEVEL 3.1 -->
   <div class="screen" id="level3-1">
     <div class="soal">Soal ini sering dianggap mudah…</div>
     <div class="jawaban">
@@ -41,7 +42,7 @@ body { margin:0; font-family:"Segoe UI", sans-serif; background:#111; display:fl
     </div>
   </div>
 
-  <!-- ===== LEVEL 3.2: Salah Pilih Konsep ===== -->
+  <!-- LEVEL 3.2 -->
   <div class="screen" id="level3-2">
     <div class="soal">Salah pilih konsep sering terjadi…</div>
     <div class="jawaban">
@@ -57,7 +58,7 @@ body { margin:0; font-family:"Segoe UI", sans-serif; background:#111; display:fl
     </div>
   </div>
 
-  <!-- ===== LEVEL 3.3: Terjebak Opsi Tampak Benar ===== -->
+  <!-- LEVEL 3.3 -->
   <div class="screen" id="level3-3">
     <div class="soal">Soal ini terlihat gampang… tapi hati-hati.</div>
     <div class="jawaban">
@@ -75,7 +76,7 @@ body { margin:0; font-family:"Segoe UI", sans-serif; background:#111; display:fl
     </div>
   </div>
 
-  <!-- ===== LEVEL 3.4: Rationale Singkat ===== -->
+  <!-- LEVEL 3.4 -->
   <div class="screen" id="level3-4">
     <div class="soal">Mari lihat Rationale singkatnya.</div>
     <div class="text-overlay" id="overlay4-1">Langkah 1: Identifikasi konsep</div>
@@ -90,7 +91,7 @@ body { margin:0; font-family:"Segoe UI", sans-serif; background:#111; display:fl
     </div>
   </div>
 
-  <!-- ===== LEVEL 3.5: Kenapa Latihan Biasa Gagal ===== -->
+  <!-- LEVEL 3.5 -->
   <div class="screen" id="level3-5">
     <div class="soal">Latihan biasa sering gagal…</div>
     <div class="jawaban">
@@ -109,7 +110,6 @@ body { margin:0; font-family:"Segoe UI", sans-serif; background:#111; display:fl
 </div>
 
 <script>
-// Jalankan script setelah DOM siap
 window.onload = function(){
   const levels = ["level3-1","level3-2","level3-3","level3-4","level3-5"];
 
