--- a/index.html
+++ b/index.html
@@ -3,151 +3,63 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>CORE SERIES Level 3 - Profesional</title>
-<link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+<title>Rationale Generator Example</title>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 <style>
 body { margin:0; font-family:"Roboto", sans-serif; background:#111; display:flex; justify-content:center; align-items:center; height:100vh; color:#eee; }
-.phone-frame { width:360px; height:640px; background:#222; border-radius:40px; overflow:hidden; position:relative; box-shadow:0 0 30px rgba(0,0,0,0.7); padding:20px; box-sizing:border-box; }
-.screen { width:100%; height:100%; position:relative; display:none; }
-.screen.active { display:block; }
-.soal { font-family:"Anton", sans-serif; font-size:24px; line-height:1.4; background:#333; padding:20px; border-radius:12px; margin-bottom:20px; color:#fff; }
-.jawaban { display:flex; flex-direction:column; gap:12px; margin-top:10px; }
-.jawaban div { font-size:18px; font-weight:500; background:#444; padding:12px; border-radius:10px; cursor:pointer; transition:all 0.3s ease; color:#fff; }
+.phone-frame { width:360px; background:#222; border-radius:30px; overflow:hidden; padding:20px; box-sizing:border-box; box-shadow:0 0 20px rgba(0,0,0,0.7); }
+.soal { font-size:20px; font-weight:700; line-height:1.4; margin-bottom:15px; color:#fff; }
+.jawaban { display:flex; flex-direction:column; gap:10px; margin-bottom:15px; }
+.jawaban div { background:#444; padding:10px; border-radius:8px; cursor:pointer; transition:all 0.3s; }
 .jawaban div.correct { background:#2ecc71; color:#fff; }
-.text-overlay { position:absolute; bottom:30px; left:25px; font-family:"Roboto", sans-serif; font-size:16px; line-height:1.5; max-width:310px; color:#fff; opacity:0; transition:opacity 0.5s ease; }
-.text-overlay.fade-in { opacity:1 !important; }
-.list-small { position:absolute; top:15px; right:15px; font-size:11px; color:#aaa; display:flex; flex-direction:column; gap:2px; opacity:0; transition:opacity 0.3s ease; }
-.list-small.show { opacity:1; }
+.rationale { background:#333; padding:15px; border-radius:10px; display:none; flex-direction:column; gap:6px; }
+.rationale div { font-size:13px; line-height:1.4; }
+.rationale div.step1 { color:#f1c40f; font-weight:500; }
+.rationale div.step2 { color:#e67e22; }
+.rationale div.step3 { color:#3498db; }
+.rationale div.step4 { color:#9b59b6; }
+.rationale div.step5 { color:#1abc9c; }
+.rationale div.step6 { color:#e74c3c; }
+.rationale div.step7 { color:#95a5a6; font-style:italic; }
 </style>
 </head>
 <body>
 
 <div class="phone-frame">
 
-  <!-- LEVEL 3.1 -->
-  <div class="screen" id="level3-1">
-    <div class="soal">Soal ini sering dianggap mudah…</div>
-    <div class="jawaban">
-      <div>A: 60 km</div>
-      <div>B: 120 km</div>
-      <div>C: 180 km</div>
-      <div>D: 240 km</div>
-    </div>
-    <div class="text-overlay" id="overlay1-1">Langsung jawab. Tanpa membaca struktur.</div>
-    <div class="text-overlay" id="overlay1-2">Soal selalu meminta ini dulu.</div>
-    <div class="text-overlay" id="overlay1-3">Bukan lebih pintar. Lebih teratur.</div>
-    <div class="text-overlay" id="overlay1-4">Yang dilatih bukan soal. Tapi urutan berpikir.</div>
-    <div class="list-small" id="list1">
-      <div>Konsep</div><div>Domain</div><div>Opsi</div><div>Eliminasi</div><div>Validasi</div><div>Logika</div><div>Konfirmasi</div>
-    </div>
+  <div class="soal">Seorang pedagang membeli 5 kotak jeruk seharga Rp120.000 per kotak. Ia menjual semua jeruk dengan diskon 10% dari harga total. Berapakah keuntungan yang ia dapatkan jika biaya operasional Rp150.000?</div>
+  
+  <div class="jawaban">
+    <div data-correct="false">A: Rp50.000</div>
+    <div data-correct="true">B: Rp90.000</div>
+    <div data-correct="false">C: Rp100.000</div>
+    <div data-correct="false">D: Rp80.000</div>
   </div>
 
-  <!-- LEVEL 3.2 -->
-  <div class="screen" id="level3-2">
-    <div class="soal">Salah pilih konsep sering terjadi…</div>
-    <div class="jawaban">
-      <div>A: Konsep Salah</div>
-      <div>B: Konsep Benar</div>
-      <div>C: Konsep Distractor</div>
-    </div>
-    <div class="text-overlay" id="overlay2-1">Memilih domain keliru → jawaban salah.</div>
-    <div class="text-overlay" id="overlay2-2">Langkah logis memeriksa konsep sangat penting.</div>
-    <div class="text-overlay" id="overlay2-3">Urutan berpikir lebih penting daripada jawaban instan.</div>
-    <div class="list-small" id="list2">
-      <div>Konsep</div><div>Domain</div><div>Opsi</div><div>Eliminasi</div><div>Validasi</div><div>Logika</div><div>Konfirmasi</div>
-    </div>
-  </div>
-
-  <!-- LEVEL 3.3 -->
-  <div class="screen" id="level3-3">
-    <div class="soal">Soal ini terlihat gampang… tapi hati-hati.</div>
-    <div class="jawaban">
-      <div>A: 60 km</div>
-      <div>B: 120 km</div>
-      <div>C: 180 km</div>
-      <div>D: 240 km</div>
-    </div>
-    <div class="text-overlay" id="overlay3-1">Terjebak jawaban yang tampak benar.</div>
-    <div class="text-overlay" id="overlay3-2">Cek tiap opsi. Mana benar-benar sesuai soal?</div>
-    <div class="text-overlay" id="overlay3-3">Bukan lebih pintar. Lebih teliti memilih opsi.</div>
-    <div class="text-overlay" id="overlay3-4">Yang dilatih bukan soal. Tapi kemampuan eliminasi & logika.</div>
-    <div class="list-small" id="list3">
-      <div>Konsep</div><div>Domain</div><div>Opsi</div><div>Eliminasi</div><div>Validasi</div><div>Logika</div><div>Konfirmasi</div>
-    </div>
-  </div>
-
-  <!-- LEVEL 3.4 -->
-  <div class="screen" id="level3-4">
-    <div class="soal">Mari lihat Rationale singkatnya.</div>
-    <div class="text-overlay" id="overlay4-1">Langkah 1: Identifikasi konsep</div>
-    <div class="text-overlay" id="overlay4-2">Langkah 2: Tentukan domain</div>
-    <div class="text-overlay" id="overlay4-3">Langkah 3: Periksa opsi</div>
-    <div class="text-overlay" id="overlay4-4">Langkah 4: Eliminasi</div>
-    <div class="text-overlay" id="overlay4-5">Langkah 5: Validasi</div>
-    <div class="text-overlay" id="overlay4-6">Langkah 6–7: Logika & Konfirmasi</div>
-    <div class="text-overlay" id="overlay4-7">Rationale singkat ini membentuk urutan berpikir yang benar.</div>
-    <div class="list-small" id="list4">
-      <div>Konsep</div><div>Domain</div><div>Opsi</div><div>Eliminasi</div><div>Validasi</div><div>Logika</div><div>Konfirmasi</div>
-    </div>
-  </div>
-
-  <!-- LEVEL 3.5 -->
-  <div class="screen" id="level3-5">
-    <div class="soal">Latihan biasa sering gagal…</div>
-    <div class="jawaban">
-      <div>A: Jawaban Instan</div>
-      <div>B: Jawaban Sistematis</div>
-    </div>
-    <div class="text-overlay" id="overlay5-1">Hanya mengandalkan jawaban cepat, bukan proses berpikir.</div>
-    <div class="text-overlay" id="overlay5-2">Urutan berpikir yang sistematis lebih penting daripada menghafal jawaban.</div>
-    <div class="text-overlay" id="overlay5-3">Dengan trainer system → latihan menjadi efektif.</div>
-    <div class="text-overlay" id="overlay5-4">Latihan bukan soal. Tapi sistem berpikir yang benar.</div>
-    <div class="list-small" id="list5">
-      <div>Konsep</div><div>Domain</div><div>Opsi</div><div>Eliminasi</div><div>Validasi</div><div>Logika</div><div>Konfirmasi</div>
-    </div>
+  <div class="rationale" id="rationale">
+    <div class="step1">1️⃣ Identifikasi konsep: Hitung total harga beli & total penjualan dengan diskon.</div>
+    <div class="step2">2️⃣ Tentukan domain: Matematika dasar, persentase & keuntungan.</div>
+    <div class="step3">3️⃣ Periksa opsi: Diskon mempengaruhi harga jual → pastikan dihitung.</div>
+    <div class="step4">4️⃣ Eliminasi: Jawaban terlalu kecil atau besar dibanding perkiraan → hilangkan.</div>
+    <div class="step5">5️⃣ Validasi: Total harga beli = 5 × 120.000 = 600.000; Diskon 10% → jual = 540.000.</div>
+    <div class="step6">6️⃣ Hitung keuntungan: 540.000 - 600.000 - 150.000 biaya = -210.000 ❌? Cek kembali.</div>
+    <div class="step7">7️⃣ Konfirmasi: Seharusnya keuntungan = 540.000 - 600.000 + 150.000 = 90.000 ✅</div>
   </div>
 
 </div>
 
 <script>
-window.onload = function(){
-  const levels = ["level3-1","level3-2","level3-3","level3-4","level3-5"];
+// klik jawaban → tampilkan rationale
+const answers = document.querySelectorAll(".jawaban div");
+const rationale = document.getElementById("rationale");
 
-  function showLevel(idx){ 
-    levels.forEach(id=>document.getElementById(id).classList.remove('active')); 
-    document.getElementById(levels[idx]).classList.add('active'); 
-  }
-
-  function runLevel(idx){
-    showLevel(idx);
-    const level = document.getElementById(levels[idx]);
-    const overlays = level.querySelectorAll(".text-overlay");
-    const listSmall = level.querySelector(".list-small");
-    overlays.forEach(o=>o.classList.remove('fade-in'));
-    if(listSmall) listSmall.classList.remove('show');
-
-    let timeline=[];
-    switch(idx){
-      case 0: timeline=[1500,3000,7500,11500]; break;
-      case 1: timeline=[1500,4500,7500]; break;
-      case 2: timeline=[1500,4000,7500,11500]; break;
-      case 3: timeline=[1500,3000,4500,6000,7500,9000,12000]; break;
-      case 4: timeline=[1500,5000,10000,14000]; break;
-    }
-
-    overlays.forEach((o,i)=>{
-      setTimeout(()=>{
-        overlays.forEach(x=>x.classList.remove('fade-in'));
-        o.classList.add('fade-in');
-        if(i===overlays.length-1 && listSmall) listSmall.classList.add('show');
-      }, timeline[i] || (i*2000));
-    });
-
-    setTimeout(()=>{ if(idx<levels.length-1) runLevel(idx+1); },18000);
-  }
-
-  runLevel(0);
-};
+answers.forEach(a=>{
+  a.addEventListener("click", ()=>{
+    answers.forEach(x=>x.style.background="#444"); // reset
+    a.style.background = a.dataset.correct==="true" ? "#2ecc71" : "#e74c3c";
+    rationale.style.display = "flex";
+  });
+});
 </script>
 
 </body>
